Map controls in charts tab

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -403,7 +403,7 @@ div#recordUnlock button div small, div#recordUnlock div#staticMessage small
   float: right;
 }
 
-#chart_adder {
+#map_adder {
   float: right;
   clear: right;
 }
