--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/summary.vm
@@ -130,7 +130,7 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/summary")
 </tr></table>
 <div class="chart_controls">
   #if(!$postcodeField)
-  <div id="chart_adder" class="viz_control">
+  <div id="map_adder" class="viz_control">
     Map by postcode field 
     <form method="POST" action="AppController.servlet">
       <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
