--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -865,7 +865,7 @@ div#reportData {
     top: 0;
     padding: 1em;
     margin: 1em;
-    background-color: rgba(255,255,255,0.8;
+    background-color: rgba(255,255,255,0.8);
   }
   
   #map_legend img {
