--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -866,6 +866,7 @@ div#reportData {
     padding: 1em;
     margin: 1em;
     background-color: rgba(255,255,255,0.8);
+    border-radius: 1em;
   }
   
   #map_legend img {
