--- a/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
@@ -66,7 +66,7 @@
 </table>
 #set($current_layout = $table.getFormStyle())
 <div id="layout_selector" style="width:100%; background-color:#f4f4f4; padding: 1em;">
-<h2>Choose a layout for the data entry form</h2>
+  <h2>Choose a layout for the data entry form</h2>
   <div id="single_column" class="select_layout #if($current_layout == 'SINGLE_COLUMN') selected_layout #end">
     <img src="resources/tabs/1_column.png"><br>one column
   </div>
@@ -77,4 +77,24 @@
     <img src="resources/tabs/2_columns_sectioned.png"><br>two columns within a section
   </div>
   <br style="clear:both" />
+</div>
+<div id="tabs_selector" style="width:100%; background-color:#f4f4f4; padding: 1em;">
+  <h2>Choose child tabs for the form</h2>
+  <form method="post" action="AppController.servlet">
+    <input type="hidden" name="add_form_table" value="true" />
+    <input type="hidden" name="return" value="gui/tabs/pane3" />
+    <select name-"tabtable" onchange="form.submit();">
+      <option value="">--select a table to include--</option>
+      #set($dependentTables = $view.getDependentTables()) ## child tables
+      #foreach($dependentTable in $dependentTables)
+        <option value="$dependentTable.getInternalTableName()">$dependentTable</option>
+      #end
+    </select>
+  </form>
+  Existing tabs:
+  <ul>
+    #foreach($formTab in $table.getFormTabs())
+      <li>$formTab</li>
+    #end
+  </ul>
 </div>
