--- a/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
@@ -81,9 +81,9 @@
 <div id="tabs_selector" style="width:100%; background-color:#f4f4f4; padding: 1em;">
   <h2>Choose child tabs for the form</h2>
   <form method="post" action="AppController.servlet">
-    <input type="hidden" name="add_form_table" value="true" />
+    <input type="hidden" name="add_form_tab" value="true" />
     <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
-    <select name-"tabtable" onchange="form.submit();">
+    <select name="tabtable" onchange="form.submit();">
       <option value="">--select a table to include--</option>
       #set($dependentTables = $view.getDirectlyDependentTables($table)) ## child tables
       #foreach($dependentTable in $dependentTables)
