--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -23,7 +23,11 @@
     </div> <!-- end of previous section block -->
   #end
   #if($firstSection)
-    <div #if($formStyle == "TWO_COLUMNS") class="two_cols" #end> <!-- start of sections container -->
+    #set($formTabs = $sessionTable.getFormTabs())
+    #if($formTabs.size() > 0)
+      #parse("gui/reports_and_tables/tabs/form_tabber.vm")
+    #end
+    <div #if($formStyle == "TWO_COLUMNS") class="two_cols" id="form_tabs" #end> <!-- start of sections container -->
     #set($hasSections = true)
     #set($firstSection = false)
   #end
