--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -87,8 +87,8 @@
     </td>
     <td>
       <select name="reportstyle" id="reportstyle" gtpb_update_report onchange="new fChange(this); parent.pane_1.document.location = 'AppController.servlet?return=gui/pane1';" identifier="$internalReportName">
-          <option value="SPREADSHEET" #if($reportStyle == "SPREADSHEET") selected #end>Spreadsheet - standard output in rows</option>
-          <option value="SECTIONED" #if($reportStyle == "SECTIONED") selected #end>Sectioned - rows split into sections, with headings</option>
+        <option value="SPREADSHEET" #if($reportStyle == "SPREADSHEET") selected #end>Spreadsheet - standard output in rows</option>
+        <option value="SECTIONED" #if($reportStyle == "SECTIONED") selected #end>Sectioned - rows split into sections, with headings</option>
       </select>
     </td>
   </tr>
@@ -99,18 +99,18 @@
     </td>
     <td>
       #set($distinctFields = $report.getDistinctFields())
-      <form method="post" action="AppController.servlet">
-        <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
-        <input type="hidden" name="add_report_distinct" value="true" />
-        <select name="distinctinternalfieldname" onchange="form.submit();">
-          <option value="">--please choose a distinct field--</option>
-          #foreach($field in $report.getReportBaseFields())
-            #if( (!$field.equals($report.getParentTable().getPrimaryKey())) && (!$distinctFields.contains($field)) )
-              <option value="$field.getInternalFieldName()">$field</option>
-            #end
-          #end
-        </select>
-      </form>
+##      <form method="post" action="AppController.servlet">
+##        <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
+##        <input type="hidden" name="add_report_distinct" value="true" />
+##        <select name="distinctinternalfieldname" onchange="form.submit();">
+##          <option value="">--please choose a distinct field--</option>
+##          #foreach($field in $report.getReportBaseFields())
+##            #if( (!$field.equals($report.getParentTable().getPrimaryKey())) && (!$distinctFields.contains($field)) )
+##              <option value="$field.getInternalFieldName()">$field</option>
+##            #end
+##          #end
+##        </select>
+##      </form>
       #foreach($distinctField in $distinctFields)
         <a href="AppController.servlet?return=gui/reports_and_tables/pane3&remove_report_distinct=true&distinctinternalfieldname=$distinctField.getInternalFieldName()"><img src="resources/toolbar/delete.png" style="width:13px; height:13px" /></a>$distinctField<br>
       #end
