Support for DISTINCT in reports: ui

--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -93,27 +93,9 @@
     </td>
   </tr>
   <tr class="advanced">
-    <td>Select any fields you want to set to DISTINCT in this report.<br>
-        This means that only one row per unique value will be displayed. 
-        In SQL terms, a DISTINCT clause is added to the SELECT.
+    <td>Select any fields you want to set to DISTINCT in this report
     </td>
     <td>
-      #set($distinctFields = $report.getDistinctFields())
-##      <form method="post" action="AppController.servlet">
-##        <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
-##        <input type="hidden" name="add_report_distinct" value="true" />
-##        <select name="distinctinternalfieldname" onchange="form.submit();">
-##          <option value="">--please choose a distinct field--</option>
-##          #foreach($field in $report.getReportBaseFields())
-##            #if( (!$field.equals($report.getParentTable().getPrimaryKey())) && (!$distinctFields.contains($field)) )
-##              <option value="$field.getInternalFieldName()">$field</option>
-##            #end
-##          #end
-##        </select>
-##      </form>
-      #foreach($distinctField in $distinctFields)
-        <a href="AppController.servlet?return=gui/reports_and_tables/pane3&remove_report_distinct=true&distinctinternalfieldname=$distinctField.getInternalFieldName()"><img src="resources/toolbar/delete.png" style="width:13px; height:13px" /></a>$distinctField<br>
-      #end
     </td>
   </tr>
   <tr>
