Support for DISTINCT in reports: ui

--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -93,7 +93,8 @@
     </td>
   </tr>
   <tr class="advanced">
-    <td>Select any fields you want to set to DISTINCT in this report
+    <td>Distinct fields:<br>
+      <span class='greytext'><i>Select any fields you want to set to DISTINCT in this report. Only one row per unique value will be displayed.</span>
     </td>
     <td>
     </td>
