Support for DISTINCT in reports: ui

--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -115,6 +115,10 @@
       #end
     </td>
   </tr>
+  <tr id="showadvanced">
+    <td >&nbsp;</td>
+    <td><a href="javascript:$('.advanced').show('normal');">advanced options</a></td>
+  </tr>
   <tr>
     <td>&nbsp;</td>
     <td>
