Support for DISTINCT in reports: ui: advanced options

--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -115,9 +115,9 @@
       #end
     </td>
   </tr>
-  <tr id="showadvanced">
+  <tr>
     <td >&nbsp;</td>
-    <td><a href="javascript:$('.advanced').show('normal');">advanced options</a></td>
+    <td><a href="javascript:showAdvanced();">advanced options</a></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
