--- a/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/reports/option_sets/report_details_data.vm
@@ -115,7 +115,7 @@
       #end
     </td>
   </tr>
-  <tr>
+  <tr id="showAdvanced">
     <td >&nbsp;</td>
     <td><a href="javascript:showAdvanced();">advanced options</a></td>
   </tr>
