--- a/gtpb_clientside/WEB-INF/templates/gui/development/update_calculation.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/development/update_calculation.vm
@@ -60,10 +60,14 @@
             		    </select>
         	      </td>
             </tr>
-	            <tr>
-		              <td>Calculation definition (SQL)</td>
-        		      <td><textarea name="calculationdefn" cols="60" rows="4">$reportField.getCalculationDefinition()</textarea></td>
-      	      </tr>
+              <tr>
+                  <td>Calculation definition (SQL)</td>
+                  <td><textarea name="calculationdefn" cols="60" rows="4">$reportField.getCalculationDefinition()</textarea></td>
+              </tr>
+              <tr>
+                  <td>Hide calculation in report</td>
+                  <td><input type="checkbox" name="isreporthidden" value="true" #if($reportField.isReportHidden()) selected #end /></td>
+              </tr>
             	<tr>
         		      <td>&nbsp;</td>
         		      <td><input type="submit" value="Update Calculation" /></td>
