--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
@@ -40,7 +40,7 @@
   #set($fields=[])##
   #set($reportBaseFields = $sessionReport.getReportBaseFields())##
   #foreach ($field in $reportBaseFields)##
-    #if( (!$field.isPrimaryKey()) || (!$field.getReportCalcField().isReportHidden()) || ($sessionContext == "SYSADMIN") || $sectionedReport)##
+    #if( ((!$field.isPrimaryKey()) && (!$field.getReportCalcField().isReportHidden())) || ($sessionContext == "SYSADMIN") || $sectionedReport)##
 	  #set($success=$fields.add([$field.getInternalFieldName(),$field]))##
 	#end ## added to show display field name for relation fields
   #end##
@@ -70,7 +70,7 @@
 	  #set($success = $colours.ensureCapacity($colsCapacity))##
     #set($dataRowFields = $datarow.getDataRowFields())##
     #foreach($field in $reportBaseFields)##
-      #if((!$field.isPrimaryKey()) || ($sessionContext == "SYSADMIN") || $sectionedReport)
+    #if( ((!$field.isPrimaryKey()) && (!$field.getReportCalcField().isReportHidden())) || ($sessionContext == "SYSADMIN") || $sectionedReport)##
         #set($dataRowField = $dataRowFields.get($field))##
         #if($printout && ($field.getContentSize() > 500))##
           #set($success=$row.add($dataRowField.getKeyValue()))##
